--- a/TPMetodosAgiles/src/main/resources/Reporte/ListadoRango.jrxml
+++ b/TPMetodosAgiles/src/main/resources/Reporte/ListadoRango.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2e921a59-be93-4185-a561-895a680b3313">
-	<property name="ireport.zoom" value="1.2100000000000006"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="7dc48dfe-eba4-4d52-93f5-e1c44dddfbd2">
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
@@ -39,7 +39,7 @@ FROM
      `licencia` licencia,
      `persona` persona
 WHERE 
-	licencia.`fecha_venc` > NOW()
+	licencia.`fecha_venc` > '2019-10-8'
 group by licencia.`id`]]>
 	</queryString>
 	<field name="licencia_id" class="java.lang.Integer"/>
@@ -62,23 +62,20 @@ group by licencia.`id`]]>
 	<field name="persona_grupo_sanguineo" class="java.lang.String"/>
 	<field name="persona_factor" class="java.lang.String"/>
 	<field name="persona_donante" class="java.lang.Boolean"/>
+	<group name="licencia_id">
+		<groupExpression><![CDATA[$F{licencia_id}]]></groupExpression>
+		<groupHeader>
+			<band/>
+		</groupHeader>
+		<groupFooter>
+			<band height="6"/>
+		</groupFooter>
+	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="78" splitType="Stretch">
-			<image>
-				<reportElement uuid="ffa2a496-0dec-4d72-9301-88f73ecb4d2c" x="721" y="0" width="73" height="66"/>
-				<imageExpression><![CDATA["C:\\Proyectos Java\\TPMetodosAgiles\\TPMetodosAgiles\\src\\main\\resources\\Presentacion\\logo santa fe.png"]]></imageExpression>
-			</image>
-			<staticText>
-				<reportElement uuid="f334e56e-b0f2-4433-a028-8ee95309dffe" x="0" y="0" width="721" height="66"/>
-				<textElement>
-					<font fontName="Microsoft YaHei" size="36"/>
-				</textElement>
-				<text><![CDATA[Listado de licencias vigentes]]></text>
-			</staticText>
-		</band>
+		<band height="102" splitType="Stretch"/>
 	</title>
 	<pageHeader>
 		<band splitType="Stretch"/>
@@ -86,63 +83,63 @@ group by licencia.`id`]]>
 	<columnHeader>
 		<band height="18" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="ce41a467-523f-4c1a-a365-25d196989f19" style="Column header" x="39" y="0" width="39" height="18" forecolor="#000000"/>
+				<reportElement uuid="ce41a467-523f-4c1a-a365-25d196989f19" style="Column header" x="43" y="0" width="39" height="18" forecolor="#000000"/>
 				<textElement textAlignment="Center">
 					<font isBold="false"/>
 				</textElement>
 				<text><![CDATA[Clase]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="6a3d5c02-14dd-41a5-8ad8-bda22f8426ab" style="Column header" x="78" y="0" width="110" height="18" forecolor="#000000"/>
-				<textElement textAlignment="Center">
-					<font isBold="false"/>
-				</textElement>
-				<text><![CDATA[Emisión]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="1883efe3-737a-4d16-ad5f-ba59c0659457" style="Column header" x="188" y="0" width="116" height="18" forecolor="#000000"/>
-				<textElement textAlignment="Center">
-					<font isBold="false"/>
-				</textElement>
-				<text><![CDATA[Vencimiento]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="bfeea807-cbc6-424b-beb5-3802585504e0" style="Column header" x="304" y="0" width="99" height="18" forecolor="#000000"/>
-				<textElement textAlignment="Center">
-					<font isBold="false"/>
-				</textElement>
-				<text><![CDATA[Apellido]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="0cae808e-7aa2-4044-8f2a-8cbde77d922a" style="Column header" x="403" y="0" width="91" height="18" forecolor="#000000"/>
-				<textElement textAlignment="Center">
-					<font isBold="false"/>
-				</textElement>
-				<text><![CDATA[Nombre]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="018fe354-e30d-4b4a-a8b0-2447613529e1" style="Column header" x="494" y="0" width="105" height="18" forecolor="#000000"/>
-				<textElement textAlignment="Center">
-					<font isBold="false"/>
-				</textElement>
-				<text><![CDATA[Grupo Sanguineo]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="d3f6897b-7c58-41e9-bdfc-d17387cb4a4b" style="Column header" x="599" y="0" width="39" height="18" forecolor="#000000"/>
-				<textElement textAlignment="Center">
-					<font isBold="false"/>
-				</textElement>
-				<text><![CDATA[Factor]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="86bc2a76-0064-42f3-8849-196f15e7423f" style="Column header" x="638" y="0" width="59" height="18" forecolor="#000000"/>
+				<reportElement uuid="86bc2a76-0064-42f3-8849-196f15e7423f" style="Column header" x="642" y="0" width="59" height="18" forecolor="#000000"/>
 				<textElement textAlignment="Center">
 					<font isBold="false"/>
 				</textElement>
 				<text><![CDATA[Donante]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="2d4d2714-2424-48a1-9bfc-9ced586c37fc" style="Column header" x="0" y="0" width="39" height="18" forecolor="#000000"/>
+				<reportElement uuid="018fe354-e30d-4b4a-a8b0-2447613529e1" style="Column header" x="498" y="0" width="105" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font isBold="false"/>
+				</textElement>
+				<text><![CDATA[Grupo Sanguineo]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="d3f6897b-7c58-41e9-bdfc-d17387cb4a4b" style="Column header" x="603" y="0" width="39" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font isBold="false"/>
+				</textElement>
+				<text><![CDATA[Factor]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="6a3d5c02-14dd-41a5-8ad8-bda22f8426ab" style="Column header" x="82" y="0" width="110" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font isBold="false"/>
+				</textElement>
+				<text><![CDATA[Emisión]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="bfeea807-cbc6-424b-beb5-3802585504e0" style="Column header" x="308" y="0" width="99" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font isBold="false"/>
+				</textElement>
+				<text><![CDATA[Apellido]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="1883efe3-737a-4d16-ad5f-ba59c0659457" style="Column header" x="192" y="0" width="116" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font isBold="false"/>
+				</textElement>
+				<text><![CDATA[Vencimiento]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="0cae808e-7aa2-4044-8f2a-8cbde77d922a" style="Column header" x="407" y="0" width="91" height="18" forecolor="#000000"/>
+				<textElement textAlignment="Center">
+					<font isBold="false"/>
+				</textElement>
+				<text><![CDATA[Nombre]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="2d4d2714-2424-48a1-9bfc-9ced586c37fc" style="Column header" x="4" y="0" width="39" height="18" forecolor="#000000"/>
 				<textElement textAlignment="Center">
 					<font isBold="false"/>
 				</textElement>
@@ -151,79 +148,79 @@ group by licencia.`id`]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="26" splitType="Stretch">
+		<band height="18" splitType="Stretch">
 			<frame>
-				<reportElement uuid="1ab12f58-0a36-4bf0-a935-1f9d8cdc21f4" style="Row" mode="Opaque" x="0" y="0" width="797" height="18"/>
+				<reportElement uuid="b6732a74-76b3-4208-afab-c9711db4f560" style="Row" mode="Opaque" x="0" y="0" width="797" height="18"/>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="aa9e72ff-c83a-4f7c-97b6-a53497d35d6a" style="Detail" positionType="Float" x="39" y="0" width="39" height="18"/>
-					<textElement textAlignment="Center">
-						<font size="14"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{licencia_clase_id}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="8ca8305f-4c7c-432f-bb64-a1f07995d7a3" style="Detail" positionType="Float" x="78" y="0" width="110" height="18"/>
-					<textElement textAlignment="Center">
-						<font size="14"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{licencia_fecha_emision}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="5034aecc-fe71-4877-98be-2fbf1b2301c9" style="Detail" positionType="Float" x="304" y="0" width="99" height="18"/>
-					<textElement textAlignment="Center">
-						<font size="14"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{persona_apellido}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="bfad3877-48dd-48ca-a786-d9aaa37882d3" style="Detail" positionType="Float" x="403" y="0" width="91" height="18"/>
-					<textElement textAlignment="Center">
-						<font size="14"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{persona_nombre}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="49fd5d83-c1ae-47f3-b50c-71b8f63d2907" style="Detail" positionType="Float" x="494" y="0" width="105" height="18"/>
-					<textElement textAlignment="Center">
-						<font size="14"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{persona_grupo_sanguineo}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement uuid="a8579c1b-81b1-424d-afac-a9cd50e9ef08" style="Detail" positionType="Float" x="599" y="0" width="39" height="18"/>
+					<reportElement uuid="a8579c1b-81b1-424d-afac-a9cd50e9ef08" style="Detail" positionType="Float" x="603" y="0" width="39" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{persona_factor}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="01e3eb9c-00b9-45af-b202-4959f84caf70" style="Detail" positionType="Float" x="638" y="0" width="59" height="18"/>
+					<reportElement uuid="49fd5d83-c1ae-47f3-b50c-71b8f63d2907" style="Detail" positionType="Float" x="498" y="0" width="105" height="18"/>
+					<textElement textAlignment="Center">
+						<font size="14"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{persona_grupo_sanguineo}]]></textFieldExpression>
+				</textField>
+				<textField isStretchWithOverflow="true">
+					<reportElement uuid="01e3eb9c-00b9-45af-b202-4959f84caf70" style="Detail" positionType="Float" x="642" y="0" width="59" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{persona_donante}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="4d9ead83-5d6a-40b2-8828-54df448db901" style="Detail" positionType="Float" x="0" y="0" width="39" height="18"/>
+					<reportElement uuid="5034aecc-fe71-4877-98be-2fbf1b2301c9" style="Detail" positionType="Float" x="308" y="0" width="99" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{licencia_id}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{persona_apellido}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement uuid="7ed5d351-bd2f-4049-a5bc-47462f91f11c" style="Detail" positionType="Float" x="188" y="0" width="116" height="18"/>
+					<reportElement uuid="7ed5d351-bd2f-4049-a5bc-47462f91f11c" style="Detail" positionType="Float" x="192" y="0" width="116" height="18"/>
 					<textElement textAlignment="Center">
 						<font size="14"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{licencia_fecha_venc}]]></textFieldExpression>
 				</textField>
+				<textField isStretchWithOverflow="true">
+					<reportElement uuid="8ca8305f-4c7c-432f-bb64-a1f07995d7a3" style="Detail" positionType="Float" x="82" y="0" width="110" height="18"/>
+					<textElement textAlignment="Center">
+						<font size="14"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{licencia_fecha_emision}]]></textFieldExpression>
+				</textField>
+				<textField isStretchWithOverflow="true">
+					<reportElement uuid="bfad3877-48dd-48ca-a786-d9aaa37882d3" style="Detail" positionType="Float" x="407" y="0" width="91" height="18"/>
+					<textElement textAlignment="Center">
+						<font size="14"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{persona_nombre}]]></textFieldExpression>
+				</textField>
+				<textField isStretchWithOverflow="true">
+					<reportElement uuid="aa9e72ff-c83a-4f7c-97b6-a53497d35d6a" style="Detail" positionType="Float" x="43" y="0" width="39" height="18"/>
+					<textElement textAlignment="Center">
+						<font size="14"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{licencia_clase_id}]]></textFieldExpression>
+				</textField>
+				<textField isStretchWithOverflow="true">
+					<reportElement uuid="4d9ead83-5d6a-40b2-8828-54df448db901" style="Detail" positionType="Float" x="4" y="0" width="39" height="18"/>
+					<textElement textAlignment="Center">
+						<font size="14"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{licencia_id}]]></textFieldExpression>
+				</textField>
 			</frame>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="100" splitType="Stretch">
+		<band height="7" splitType="Stretch">
 			<line>
-				<reportElement uuid="41262249-b9bc-43c5-8617-5af99165d5d8" positionType="FixRelativeToBottom" x="0" y="3" width="555" height="1"/>
+				<reportElement uuid="168b4aa9-f332-4da4-8926-a270cb74177a" positionType="FixRelativeToBottom" x="0" y="3" width="555" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineColor="#999999"/>
 				</graphicElement>
@@ -231,25 +228,25 @@ group by licencia.`id`]]>
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="40" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<frame>
-				<reportElement uuid="e8a85128-74c4-452b-abfa-ebb51b31d619" mode="Opaque" x="0" y="13" width="802" height="27" forecolor="#D0B48E" backcolor="#000000"/>
+				<reportElement uuid="2a4dc5f3-dad8-4d37-bdb9-b2dd7d4521a1" mode="Opaque" x="0" y="0" width="802" height="25" forecolor="#D0B48E" backcolor="#000000"/>
 				<textField evaluationTime="Report">
-					<reportElement uuid="23831eff-612e-47f7-b2ae-18258a9a1c49" style="Column header" x="757" y="3" width="40" height="20" forecolor="#FFFFFF"/>
+					<reportElement uuid="20ade55f-c6e8-4194-941b-57d2b323db43" style="Column header" x="757" y="3" width="40" height="20" forecolor="#FFFFFF"/>
 					<textElement verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="64727cf1-8413-4ad0-8496-e0e187a39cea" style="Column header" x="481" y="3" width="276" height="20" forecolor="#FFFFFF"/>
+					<reportElement uuid="43865b6f-541a-47b1-9f04-336b28988e38" style="Column header" x="677" y="3" width="80" height="20" forecolor="#FFFFFF"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 				</textField>
 				<textField pattern="EEEEE dd MMMMM yyyy">
-					<reportElement uuid="d1e9eeb7-3e0d-48d1-bffb-73d91cbb164d" style="Column header" x="2" y="3" width="197" height="20" forecolor="#FFFFFF"/>
+					<reportElement uuid="7e556b2a-994b-4196-9d94-1c7136f38cce" style="Column header" x="2" y="3" width="197" height="20" forecolor="#FFFFFF"/>
 					<textElement verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
