--- a/TPMetodosAgiles/src/main/java/Presentacion/AltaUsuario.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/AltaUsuario.form
@@ -148,7 +148,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="crear" min="-2" pref="32" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
